--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,13 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>com.google.appengine</groupId>
+     <artifactId>appengine-api-1.0-sdk</artifactId>
+     <version>1.9.76</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
